<resources>
    <string name="app_name">@NoteSolves</string>
    <string name="title">SignIn</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username_hint">Email</string>
    <string name="passwd_hint">Password</string>
    <string name="name">Full Name</string>
    <string name="age">Age</string>
    <string name="roll_no">Roll Number</string>
    <string name="Phone_number">Phone Number</string>
    <string name="Forgot_password_title">Reset Password</string>
    <string name="Forgot_password_email">Enter Email</string>
    <string name="verify_email_title">Verify Email</string>
    <string name="update_password">Update Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="college_name">College Name</string>

    <!--    Copyright and Disclaimer-->
    <string name="Copyright">Disclaimer</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Disclaimer">  \n
        DISCLAIMER
        \n\n
        APP DISCLAIMER\n\n
        The information provided by Hide And Seek Apps (“Company”, “we”, “our”, “us”) on notesolves.hideandseekapps (the “Site”) is for general informational purposes only. All information on the Site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the App.
        UNDER NO CIRCUMSTANCE SHALL WE HAVE ANY LIABILITY TO YOU FOR ANY LOSS OR DAMAGE OF ANY KIND INCURRED AS A RESULT OF THE USE OF THE SITE OR RELIANCE ON ANY INFORMATION PROVIDED ON THE SITE. YOUR USE OF THE SITE AND YOUR RELIANCE ON ANY INFORMATION ON THE SITE IS SOLELY AT YOUR OWN RISK.\n\n

        EXTERNAL LINKS DISCLAIMER\n\n
        The App may contain (or you may be sent through the Site) links to other websites or content belonging to or originating from third parties or links to websites and features. Such external links are not investigated, monitored, or checked for accuracy, adequacy, validity, reliability, availability or completeness by us.
        WE DO NOT WARRANT, ENDORSE, GUARANTEE, OR ASSUME RESPONSIBILITY FOR THE ACCURACY OR RELIABILITY OF ANY INFORMATION OFFERED BY THIRD-PARTY WEBSITES LINKED THROUGH THE SITE OR ANY WEBSITE OR FEATURE LINKED IN ANY BANNER OR OTHER ADVERTISING. WE WILL NOT BE A PARTY TO OR IN ANY WAY BE RESPONSIBLE FOR MONITORING ANY TRANSACTION BETWEEN YOU AND THIRD-PARTY PROVIDERS OF PRODUCTS OR SERVICES.\n\n

        ERRORS AND OMISSIONS DISCLAIMER\n\n
        While we have made every attempt to ensure that the information contained in this app has been obtained from reliable sources, Hide And Seek Apps is not responsible for any errors or omissions or for the results obtained from the use of this information. All information in this app is provided “as is”, with no guarantee of completeness, accuracy, timeliness or of the results obtained from the use of this information, and without warranty of any kind, express or implied, including, but not limited to warranties of performance, merchantability, and fitness for a particular purpose.
        In no event will Hide And Seek Apps, its related partnerships or corporations, or the partners, agents or employees thereof be liable to you or anyone else for any decision made or action taken in reliance on the information in this Site or for any consequential, special or similar damages, even if advised of the possibility of such damages.\n\n

        LOGOS AND TRADEMARKS DISCLAIMER\n\n
        All logos and trademarks of third parties referenced on notesolves.hideandseekapps are the trademarks and logos of their respective owners. Any inclusion of such trademarks or logos does not imply or constitute any approval, endorsement or sponsorship of Hide And Seek Apps by such owners.\n\n

        CONTACT US\n\n
        Should you have any feedback, comments, requests for technical support or other inquiries, please contact us by email: notessolves@gmail.com.\n
    </string>
    <string name="user_profile_title">User Profile</string>

    <string name="share_with_friends">
        Hey! I\'ve discovered an incredible app called @NoteSolves. If you\'re an engineering student, you\'re in for a treat! It\'s packed with study materials like notes and past exam papers. 📚🚀\n\nCheck out @NoteSolves on the app store, and let\'s ace our engineering studies together! 😊📱
        \nDownload the app now:\n
        https://rb.gy/atk44
    </string>


</resources>