<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_update_psswd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update_password"
        android:textSize="@dimen/normal_text_size"
        android:textAlignment="center"

       android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password_cover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_old_password"
        app:passwordToggleEnabled="true"

        android:layout_margin="@dimen/margin"

        app:startIconDrawable="@drawable/psswd_icon"
        app:startIconTint="@color/primary"
        android:textColorHint="@color/primary"
        app:passwordToggleTint="@color/primary"

        app:layout_constraintTop_toBottomOf="@+id/title_update_psswd"
        app:layout_constraintLeft_toLeftOf="@id/title_update_psswd"
        app:layout_constraintRight_toRightOf="@id/title_update_psswd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_psswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_password_cover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        app:passwordToggleEnabled="true"

        android:layout_margin="@dimen/margin"

        app:startIconDrawable="@drawable/psswd_icon"
        app:startIconTint="@color/primary"
        android:textColorHint="@color/primary"
        app:passwordToggleTint="@color/primary"

        app:layout_constraintTop_toBottomOf="@+id/old_password_cover"
        app:layout_constraintLeft_toLeftOf="@id/title_update_psswd"
        app:layout_constraintRight_toRightOf="@id/title_update_psswd">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/new_psswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_password_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        android:textSize="12sp"
        android:background="@drawable/button_bg"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/update_password_cover"
        app:layout_constraintLeft_toLeftOf="@id/update_password_cover"
        app:layout_constraintRight_toRightOf="@id/update_password_cover"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>