<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <TextView
        android:id="@+id/title_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="@dimen/text_size_title"
        android:textAlignment="center"

        android:layout_marginTop="@dimen/title_top_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


<!--    <EditText-->
<!--        android:id="@+id/register_email"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/title_register"-->
<!--        app:layout_constraintLeft_toLeftOf="@id/title_register"-->
<!--        app:layout_constraintRight_toRightOf="@id/title_register"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:inputType="textWebEmailAddress"-->
<!--        android:hint="@string/username_hint"-->
<!--        android:textSize="18sp"-->
<!--        />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_margin="@dimen/margin"

        app:layout_constraintTop_toBottomOf="@+id/title_register"
        app:layout_constraintLeft_toLeftOf="@id/title_register"
        app:layout_constraintRight_toRightOf="@id/title_register"


        app:startIconDrawable="@drawable/user_logo"
        android:textColorHint="@color/primary"
        app:startIconTint="@color/primary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/white"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_margin="@dimen/margin"

        app:layout_constraintTop_toBottomOf="@+id/d"
        app:layout_constraintLeft_toLeftOf="@id/title_register"
        app:layout_constraintRight_toRightOf="@id/title_register"


        app:startIconDrawable="@drawable/mail_icon"
        android:textColorHint="@color/primary"
        app:startIconTint="@color/primary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/white"

            />

    </com.google.android.material.textfield.TextInputLayout>


<!--    <EditText-->
<!--        android:id="@+id/register_psswd"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/register_email"-->
<!--        app:layout_constraintLeft_toLeftOf="@id/title_register"-->
<!--        app:layout_constraintRight_toRightOf="@id/title_register"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:textSize="18sp"-->
<!--        android:inputType="numberPassword"-->
<!--        android:hint="@string/passwd_hint"-->
<!--        android:onClick="ShowHidePass"-->
<!--        />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/d1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/passwd_hint"
        app:passwordToggleEnabled="true"
        android:layout_margin="@dimen/margin"

        app:layout_constraintTop_toBottomOf="@+id/d0"
        app:layout_constraintLeft_toLeftOf="@id/title_register"
        app:layout_constraintRight_toRightOf="@id/title_register"


        app:startIconDrawable="@drawable/psswd_icon"
        app:startIconTint="@color/primary"
        android:textColorHint="@color/primary"
        app:passwordToggleTint="@color/primary"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_psswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@color/white"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/psswd_insrct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password Must be atleat 6 character long."
        app:layout_constraintTop_toBottomOf="@+id/d1"
        app:layout_constraintLeft_toLeftOf="@+id/d1"
        />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        android:background="@drawable/button_bg"

        android:layout_margin="@dimen/margin"

        app:layout_constraintTop_toBottomOf="@id/psswd_insrct"
        app:layout_constraintLeft_toLeftOf="@id/title_register"
        app:layout_constraintRight_toRightOf="@id/title_register"
        />

</androidx.constraintlayout.widget.ConstraintLayout>