<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Info">

    <TextView
        android:id="@+id/register_info_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Fill Info"
        android:textSize="@dimen/text_size_title"
        android:textAlignment="center"

        android:layout_marginTop="@dimen/title_top_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/regiterInfoMssg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Kindly Fill All Fields"
        android:textSize="14sp"
        android:textAlignment="center"

        android:layout_marginTop="@dimen/title_top_margin"
        android:layout_marginLeft="@dimen/title_top_margin"
        android:layout_marginRight="@dimen/title_top_margin"

        app:layout_constraintTop_toTopOf="@+id/register_info_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"

        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@+id/regiterInfoMssg"
        app:layout_constraintLeft_toLeftOf="@+id/register_info_title"
        app:layout_constraintRight_toRightOf="@+id/register_info_title"

        app:hintTextColor="@color/primary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/age"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/age"-->

<!--        android:layout_margin="@dimen/margin"-->

<!--        app:layout_constraintTop_toBottomOf="@+id/name"-->
<!--        app:layout_constraintLeft_toLeftOf="@+id/register_info_title"-->
<!--        app:layout_constraintRight_toRightOf="@+id/register_info_title"-->

<!--        app:hintTextColor="@color/primary"-->
<!--        >-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/register_age"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:background="@color/white"-->
<!--            />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Phone_number"

        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintLeft_toLeftOf="@+id/register_info_title"
        app:layout_constraintRight_toRightOf="@+id/register_info_title"

        app:hintTextColor="@color/primary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_phn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/collegeHead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/college_name"

        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@+id/phn"
        app:layout_constraintLeft_toLeftOf="@+id/register_info_title"
        app:layout_constraintRight_toRightOf="@+id/register_info_title"

        app:hintTextColor="@color/primary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/info_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:textSize="@dimen/normal_text_size"
        android:background="@drawable/button_bg"

        android:layout_margin="@dimen/margin"

        app:layout_constraintTop_toBottomOf="@+id/collegeHead"
        app:layout_constraintLeft_toLeftOf="@+id/register_info_title"
        app:layout_constraintRight_toRightOf="@+id/register_info_title"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Copyright"
        android:textAlignment="center"

        android:layout_marginRight="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>